@@ -1,25 +1,25 @@
 package org.sluja.searcher.webapp.mapper.category;
 
-import jakarta.validation.Valid;
-import org.mapstruct.*;
-import org.sluja.searcher.webapp.annotation.validation.InputValidation;
 import org.sluja.searcher.webapp.dto.presentation.category.CategoryDto;
 import org.sluja.searcher.webapp.model.category.Category;
 import org.sluja.searcher.webapp.model.context.Context;
+import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Mapper(componentModel = "spring")
-public interface CategoryMapper {
+@Component
+public class CategoryMapper {
 
-    @InputValidation(inputs = CategoryDto.class)
-    Category toEntity(CategoryDto categoryDto);
+    public CategoryDto map(final Category category) {
+        return new CategoryDto(category.getId(),
+                category.getName(),
+                getContextsNames(category.getContexts()));
+    }
 
-    @Mapping(target = "contextNames", expression = "java(contextsToContextNames(category.getContexts()))")
-    CategoryDto toDto(Category category);
-
-    default List<String> contextsToContextNames(List<org.sluja.searcher.webapp.model.context.Context> contexts) {
-        return contexts.stream().map(Context::getName).collect(Collectors.toList());
+    private List<String> getContextsNames(final List<Context> contexts) {
+        return contexts
+                .stream()
+                .map(Context::getName)
+                .toList();
     }
 }
